# cfd_for_study

./: README.md  boundary_condtions.cpp  cfd.pro  equation.cpp  equation.h  fluid.cpp  fluid.h  initialize.h  main.cpp  mesh.h  node.h  rho_equation.cpp  rho_equation.h  time_cfd.cpp  u_equation.h  unit.h
src/: CMakeLists.txt  config.h.in  main.cxx
src/bc/: CMakeLists.txt  boundary_conditions.cxx  boundary_conditions.h
src/constants/: constant.h
src/equation/: CMakeLists.txt  equation.h
src/equation/rhoEquation/: CMakeLists.txt  rho_equation.h
src/equation/uEquation/: CMakeLists.txt  u_equation.cxx  u_equation.h
src/field/: CMakeLists.txt  field.h
src/fluid/: CMakeLists.txt  fluid.h
src/mesh/: CMakeLists.txt  mesh.cxx
src/mesh/node/: CMakeLists.txt  node.h
src/tags/: tags.h
src/time/: CMakeLists.txt  time_cfd.h
src/unit/: CMakeLists.txt
